# pls

./: .gitignore  Cargo.toml  Makefile  install  pls  readme.md  uninstall  usage.md
completions/: complete.bash  complete.fish
core/: Cargo.toml
core/src/: lib.rs
core/src/lib/: calc.rs  cp.rs  help.rs  mv.rs  opn.rs  power.rs  rm.rs
core/src/lib/opn/: ch.rs  run.rs
core/src/lib/power/: off.rs  out.rs  rb.rs  sleep.rs
src/: pls.rs
