[package]
name = "pls"
description = "little assistant for you"
authors = ["Dmitrij Sinicin"]
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
system_shutdown = "4.0.1"

[lib]
name = "pls"
path = "core/src/lib.rs"

[[bin]]
name = "pls"
path = "src/pls.rs"